--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "clsx": "^2.1.0",
     "flowbite-react": "^0.7.2",
     "postcss": "^8.4.33",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-router-dom": "^5.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
